# Users

./: pyproject.toml
app/: _db_filling.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/graphql/: deps.py  resolvers.py  schema.graphql
app/api/v1/: routers.py
app/core/: config.py
app/db/: base.py  crud.py  models.py
