[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["EliseyGodX"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
patisson-applauncher = { git = "https://github.com/Patisson-Company/_AppLauncher", extras = [
    "async_fastapi_pack",
] }
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
patisson-request = { git = "https://github.com/Patisson-Company/_Request" }
patisson-graphql = {git = "https://github.com/Patisson-Company/_GraphQL", extras = ["fastapi-utils"]}
python-ulid = "^3.0.0"
faker = "^33.1.0"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
